appId: com.rakazo.app
---
- runFlow: launch-app.yaml
- runFlow:
    when:
      visible: "Sign up for BobBot"
    commands:
      - tapOn: "Sign in"
- extendedWaitUntil:
    visible: "Sign in to BobBot"
    timeout: 15000
- tapOn: "Email"
- inputText: ${BOBBOT_ACTIVE_EMAIL}
- tapOn: "Password"
- inputText: ${BOBBOT_SCREENSHOT_PASSWORD}
- hideKeyboard
- tapOn: "Sign in"
- tapOn:
    text: "Not Now"
    optional: true
- tapOn:
    text: "Don’t allow"
    optional: true
- tapOn:
    text: "Don't allow"
    optional: true
- extendedWaitUntil:
    visible: "Account"
    timeout: 40000
